# real-estate-scraper

./: .gitignore  .gitignore.txt  README.md  funda_scrape.ipynb  pyproject.toml
config/: config.json  config_refactored.json
listings_scraper/: funda_scraper.py  parsing.py  save.py  scraper.py
logs/: logs.txt
notebooks/: funda_api.ipynb  houses_web_scraping.ipynb  scrape_selenium.ipynb
notebooks/.ipynb_checkpoints/: funda_api-checkpoint.ipynb  houses_web_scraping-checkpoint.ipynb  scrape_selenium-checkpoint.ipynb
notebooks/scripts/: aiohttp_test.py  asynch_test.py  funda_scraper.py  scrape_pararius.py
real_estate_scraper/: configuration.py  database.py  geolocalization.py  html_handling.py  html_inspection.py  logging_mgmt.py  logging_mgt.py  parsing.py  save.py  scraper.py  utils.py
real_estate_scraper/countries/italy/: Elenco-comuni-italiani.xls  immobiliare.py  immobiliare_config.json
real_estate_scraper/countries/netherlands/: __init__.py  funda_config.json  funda_scraper.py
scripts/: add_coordinates_netherlands.py  funda_main.py  funda_main_logs.txt  immobiliare_main.py
src/: Untitled.ipynb  city_scraper.py  config_loader.py  configuration.py  database.py  funda_scraper.py  html_handling.py  logger.py  parsing.py  save.py  scraper.py  test.csv  test_json.json  utils.py
src/config/: config.json  config_refactored.json
src/downloads/: Delft_shallow_pages_1_2.csv  Delft_shallow_pp_all.csv  Dordrecht_shallow_pages_1_2.csv
test/: test_parsing.py  test_utils.py
