[tool.poetry]
name = "real-estate-scraper"
version = "0.0.1"
description = "a package for scraping real estate listings from websites"
authors = ["fgrillo89 <fabio.grillo89@gmail.com>"]
readme = "README.md"
packages = [{include = "real_estate_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
pipe = "^2.0"
requests = "^2.28.1"
lxml = "^4.9.2"
aiolimiter = "^1.0.0"
bs4 = "^0.0.1"
tqdm = "^4.64.1"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
sqlalchemy = "^1.4.45"
datetime = "^4.9"
tzdata = "^2022.7"
pytest = "^7.2.1"
catboost = "^1.1.1"
scikit-learn = "^1.2.0"
flask = "^2.2.2"
aiohttp = "^3.8.3"
html5lib = "^1.1"
pgeocode = "^0.4.0"
geopy = "^2.3.0"
xlrd = "^2.0.1"
unidecode = "^1.3.6"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
